--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <p>I am a final year BTech student of Electronics and Communication Engineering. <br>I have interest in learning full-Stack Web Development.
     <br> I am a professional SEO Content Writer, <a href="https://startuptalky.com/author/avantika/">here's my author page</a> from StartupTalky.
-    My hobbies are reading and collecting good books. I love to workout and be in good shape.
+    My hobbies are reading and collecting good books. I love to workout.
   </p>
   <hr size="3" noshade>
   <h3> Educational Qualifications</h3>
